examples/syntax_errors/missing_quote.py
print('Hello!)  # Error on this line: missing closing quote (')
